# paviary

./: pyproject.toml
paviary/adapters/: desktop.py
paviary/models/: mediaplayer.py  notification.py  serializable.py
paviary/serializer/: __init__.py  base.py  msgpack.py
tests/models/: base.py  test_notification.py
